8ba7ad9 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_cs.properties
+++ b/i18n/i18n_app_cs.properties
@@ -22,7 +22,7 @@ clear_map=Clear map
 clustering=Clustering
 code=Code
 color_scale=Color scale
-coordinate_field=Coordinate field
+coordinate_field=Pole sou\u0159adnic
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=Count
@@ -32,13 +32,13 @@ current_legends=Current legends
 daily=Denn\u011b
 data=Data
 data_and_periods=Data and periods
-dataelement=Data element
+dataelement=Datov\u00fd prvek
 dataelement_group=Data element group
 dataset=Data set
 delete=Smazat
 delete_favorite=Delete favorite
 details=Detaily
-download=Download
+download=St\u00e1hnout
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
 drill_up_one_level=Drill up one level
@@ -46,7 +46,7 @@ duplicate=Duplicate
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
 elevation=Elevation
-edit_layer=Edit layer
+edit_layer=Upravit vrstvu
 edit_legend=Edit legend
 email=Email
 end_date=End date
@@ -54,10 +54,10 @@ end_value_should_be_bigger_than_start_value=End value should be bigger than star
 equal_counts=Equal counts
 equal_intervals=Equal intervals
 event_data_item=Event data item
-event_data_items=Event data items
+event_data_items=Polo\u017eky dat ud\u00e1losti
 event_layer=Event layer
 event_location=Event location
-event_time=Event time
+event_time=\u010cas ud\u00e1losti
 external_layer=External layer
 external_layer_legend=External layer legend
 facility_layer=Facility layer
@@ -68,9 +68,9 @@ favorite_outdated_create_new=Favorite is outdated - please create a new one
 favorites=Favorites
 filter=Filtr
 filter_by_value=Filter by value
-financial_april=Financial year (Start April)
-financial_july=Financial year (Start July)
-financial_oct=Financial year (Start October)
+financial_april=Finan\u010dn\u00ed rok (od dubna)
+financial_july=Finan\u010dn\u00ed rok (od \u010dervence)
+financial_oct=Finan\u010dn\u00ed rok (od \u0159\u00edjna)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Go to charts
@@ -86,30 +86,30 @@ highlight_color=Highlight color
 high_size=High size
 home=Home
 indicator=Indicator
-indicator_group=Indicator group
+indicator_group=Skupina indik\u00e1tor\u016f
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
 last_2_sixmonths=Last 2 six-months
-last_3_months=Last 3 months
-last_4_quarters=Last 4 quarters
-last_4_weeks=Last 4 weeks
-last_5_financial_years=Last 5 financial years
+last_3_months=Posledn\u00ed 3 m\u011bs\u00edce
+last_4_quarters=Posledn\u00ed 4 \u010dtvrtlet\u00ed 
+last_4_weeks=Posledn\u00ed 4 t\u00fddny
+last_5_financial_years=Posledn\u00edch 5 fisk\u00e1ln\u00edch rok\u016f
 last_6_bimonths=Posledn\u00edch 6 dvou-m\u011bs\u00edc\u016f
-last_6_months=Last 6 months
-last_12_months=Last 12 months
-last_12_weeks=Last 12 weeks
-last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
+last_6_months=Posledn\u00edch 6 m\u011bs\u00edc\u016f
+last_12_months=Posledn\u00edch 12 m\u011bs\u00edc\u016f
+last_12_weeks=Posledn\u00edch 12 t\u00fddn\u016f
+last_52_weeks=Posledn\u00edch 52 t\u00fddn\u016f
+last_bimonth=Posledn\u00ed dva m\u011bs\u00edce
 last_financial_year=Posledn\u00ed finan\u010dn\u00ed rok
 last_month=Minul\u00fd m\u011bs\u00edc
-last_quarter=Last quarter
-last_sixmonth=Last six-month
+last_quarter=Posledn\u00ed \u010dtvrtlet\u00ed
+last_sixmonth=Posledn\u00ed p\u016flrok
 last_week=Minul\u00fd t\u00fdden
-last_5_years=Last 5 years
-last_year=Last year
+last_5_years=Posledn\u00edch 5 let
+last_year=Posledn\u00ed rok
 latitude=Latitude
 layer=Layer
 layers=Layers
@@ -123,7 +123,7 @@ legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
-level=Level
+level=\u00darove\u0148
 longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
@@ -136,8 +136,8 @@ min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
-monthly=Monthly
-name=Name
+monthly=M\u011bs\u00ed\u010dn\u011b
+name=N\u00e1zev
 next=Dal\u0161\u00ed
 nighttime_lights=Nighttime lights
 no=No
@@ -158,7 +158,7 @@ openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
 options=Options
-organisation_unit=Organisation unit
+organisation_unit=Organiza\u010dn\u00ed jednotka
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
 organisation_units=Organiza\u010dn\u00ed jednotky
@@ -167,9 +167,9 @@ osm_light=OSM Light
 overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
 page=Page
-parent_unit=Parent unit
+parent_unit=Nad\u0159azen\u00e1 jednotka
 period=Obdob\u00ed
-period_type=Period type
+period_type=Typ obdob\u00ed
 phone_number=Phone number
 placement=Placement
 please_create_map_first=Please create a map first
@@ -182,15 +182,15 @@ precipitation=Precipitation
 predefined=Predefined
 previous=Previous
 program=Program
-program_indicators=Program indicators
+program_indicators=Ukazatele programu
 public_access=Public access
-quarterly=Quarterly
+quarterly=\u010ctvrtletn\u011b
 relative=Relativn\u00ed
 relocate=Relocate
 relocate_facility=Relocate facility
 remove=Odebrat
 rename=Rename
-reporting_rates=Reporting rates
+reporting_rates=M\u00edry vykazov\u00e1n\u00ed
 revision=Revision
 search=Hledat
 search_for_favorites=Search for favorites
@@ -206,11 +206,11 @@ select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
 select_period=Select period
-select_program=Select program
+select_program=Vybrat program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
-select_year=Select year
+select_year=Vybrat rok
 service_url=Service URL
 share=Share
 share_with_other_people=Share with others
@@ -219,9 +219,9 @@ show=Show
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
-sixmonthly=Six-monthly
-sixmonthly_april=Six-monthly April
-stage=Stage
+sixmonthly=\u0160estim\u011bs\u00ed\u010dn\u00ed
+sixmonthly_april=Duben \u0161est m\u011bs\u00edc\u016f
+stage=F\u00e1ze
 start_date=Start date
 start_end_dates=Start/end dates
 start_end_value=Start/end value
@@ -241,15 +241,15 @@ thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
-this_bimonth=This bi-month
-this_financial_year=This financial year
-this_month=This month
-this_quarter=This quarter
-this_sixmonth=This six-month
-this_week=This week
-this_year=This year
+this_bimonth=T\u011bchto 14 dn\u00ed
+this_financial_year=Tento fisk\u00e1ln\u00ed rok
+this_month=Tento m\u011bs\u00edc
+this_quarter=Toto \u010dtvrtlet\u00ed
+this_sixmonth=Tento p\u016flrok
+this_week=Tento t\u00fdden
+this_year=Tento rok
 time_since_last_data_update=Elapsed time since last data update
-today=Today
+today=Dnes
 totals=Sou\u010dty
 update=Aktualizovat
 username=Username
@@ -262,16 +262,16 @@ value=Hodnota
 value_type=Value type
 variance=Variance
 version=Version
-weekly=Weekly
-weekly_wednesday=Weekly (Start Wednesday)
-weekly_thursday=Weekly (Start Thursday)
-weekly_saturday=Weekly (Start Saturday)
-weekly_sunday=Weekly (Start Sunday)
+weekly=T\u00fddn\u011b
+weekly_wednesday=T\u00fddn\u011b (od st\u0159edy)
+weekly_thursday=T\u00fddn\u011b (od \u010dtvrtka)
+weekly_saturday=T\u00fddn\u011b (od soboty)
+weekly_sunday=T\u00fddn\u011b (za\u010d\u00e1n\u00e1 ned\u011bl\u00ed)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=Ro\u010dn\u011b
 yes=Ano
-yesterday=Yesterday
+yesterday=V\u010dera
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
