24fca84 fix(translations): sync translations from transifex (v29)

--- a/i18n/i18n_app_cs.properties
+++ b/i18n/i18n_app_cs.properties
@@ -3,12 +3,12 @@ add_legend=Add legend
 add_new=Add new
 address=Address
 add_to_dashboard=Add to dashboard
-aggregation_type=Aggregation type
+aggregation_type=Typ agregace
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatic
-average=Average
+average=Pr\u016fm\u011br
 bimonthly=Dvakr\u00e1t za m\u011bs\u00edc
 boundary_layer=Boundary layer
 by_data_element=By data element
@@ -20,12 +20,12 @@ classes_method=Classes / method
 clear=Vy\u010distit
 clear_map=Clear map
 clustering=Clustering
-code=Code
+code=K\u00f3d
 color_scale=Color scale
 coordinate_field=Pole sou\u0159adnic
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=Count
+count=Po\u010det
 create=Create
 created_by=Vytvo\u0159il
 current_legends=Current legends
@@ -34,7 +34,7 @@ data=Data
 data_and_periods=Data and periods
 dataelement=Datov\u00fd prvek
 dataelement_group=Data element group
-dataset=Data set
+dataset=Datov\u00e1 sada
 delete=Smazat
 delete_favorite=Delete favorite
 details=Detaily
@@ -143,7 +143,7 @@ nighttime_lights=Nighttime lights
 no=Ne
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
-none=None
+none=\u017d\u00e1dn\u00fd
 no_event_coordinates_found=No event coordinates found
 no_organisation_unit_levels=No organisation unit levels
 no_organisation_units_specified=No organisation units specified
@@ -157,7 +157,7 @@ open_last_table=Open last table
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=Options
+options=Mo\u017enosti
 organisation_unit=Organiza\u010dn\u00ed jednotka
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
@@ -170,7 +170,7 @@ page=Page
 parent_unit=Nad\u0159azen\u00e1 jednotka
 period=Obdob\u00ed
 period_type=Typ obdob\u00ed
-phone_number=Phone number
+phone_number=Telefonn\u00ed \u010d\u00edslo
 placement=Placement
 please_create_map_first=Please create a map first
 please_enter_a_name=Please enter a name
@@ -225,12 +225,12 @@ stage=F\u00e1ze
 start_date=Start date
 start_end_dates=Start/end dates
 start_end_value=Start/end value
-stddev=Standard deviation
+stddev=Standardn\u00ed odchylka
 steps=Steps
 style=Style
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
-sum=Sum
+sum=Sou\u010det
 swap_lon_lat=Swap longitude/latitude
 symbol_layer=Facility layer
 table=Table
@@ -252,15 +252,15 @@ time_since_last_data_update=Elapsed time since last data update
 today=Dnes
 totals=Sou\u010dty
 update=Aktualizovat
-username=Username
+username=U\u017eivatelsk\u00e9 jm\u00e9no
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
 user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
 value=Hodnota
-value_type=Value type
-variance=Variance
+value_type=Typ hodnoty
+variance=Rozptyl
 version=Version
 weekly=T\u00fddn\u011b
 weekly_wednesday=T\u00fddn\u011b (od st\u0159edy)
