457adea fix(translations): sync translations from transifex (v29)

--- a/i18n/i18n_app_cs.properties
+++ b/i18n/i18n_app_cs.properties
@@ -7,15 +7,15 @@ aggregation_type=Typ agregace
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
-automatic=Automatic
+automatic=Automatick\u00fd
 average=Pr\u016fm\u011br
 bimonthly=Dvakr\u00e1t za m\u011bs\u00edc
 boundary_layer=Boundary layer
-by_data_element=By data element
+by_data_element=Podle datov\u00e9ho prvku
 cancel=Zru\u0161it
-can_edit_and_view=Can edit and view
-can_view=Can view
-chart=Chart
+can_edit_and_view=M\u016f\u017ee upravovat a prohl\u00ed\u017eet
+can_view=M\u016f\u017ee zobrazit
+chart=Sch\u00e9ma
 classes_method=Classes / method
 clear=Vy\u010distit
 clear_map=Clear map
@@ -26,39 +26,39 @@ coordinate_field=Pole sou\u0159adnic
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=Po\u010det
-create=Create
+create=Vytvo\u0159it
 created_by=Vytvo\u0159il
 current_legends=Current legends
 daily=Denn\u011b
 data=Data
 data_and_periods=Data and periods
 dataelement=Datov\u00fd prvek
-dataelement_group=Data element group
+dataelement_group=Skupina datov\u00fdch prvk\u016f
 dataset=Datov\u00e1 sada
 delete=Smazat
 delete_favorite=Delete favorite
 details=Detaily
 download=St\u00e1hnout
 download_map_as_png=Download map as PNG
-drill_down_one_level=Drill down one level
-drill_up_one_level=Drill up one level
+drill_down_one_level=P\u0159ej\u00edt o jednu \u00farove\u0148 n\u00ed\u017ee
+drill_up_one_level=Jd\u011bte o jednu \u00farove\u0148 v\u00fd\u0161
 duplicate=Duplicate
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
-elevation=Elevation
+elevation=Nadmo\u0159sk\u00e1 v\u00fd\u0161ka
 edit_layer=Upravit vrstvu
 edit_legend=Edit legend
 email=Email
-end_date=End date
+end_date=Datum ukon\u010den\u00ed
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
-equal_counts=Equal counts
-equal_intervals=Equal intervals
-event_data_item=Event data item
+equal_counts=Stejn\u00e9 po\u010dty
+equal_intervals=Stejn\u00e9 intervaly
+event_data_item=Datov\u00e1 polo\u017eka ud\u00e1losti
 event_data_items=Polo\u017eky dat ud\u00e1losti
 event_layer=Event layer
-event_location=Event location
+event_location=M\u00edsto kon\u00e1n\u00ed akce
 event_time=\u010cas ud\u00e1losti
-external_layer=External layer
+external_layer=Vn\u011bj\u0161\u00ed vrstva
 external_layer_legend=External layer legend
 facility_layer=Facility layer
 facility_layer_export_currently_not_supported=Facility layer export currently not supported
@@ -78,21 +78,21 @@ go_to_pivot_tables=Go to pivot tables
 greater_than=Greater than
 group=Group
 group_nearby_events=Group nearby events
-groups=Groups
-groupset=Group set
+groups=Skupiny
+groupset=Skupinov\u00e1 sada
 has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
-high_size=High size
+high_size=Velk\u00e1 velikost
 home=Home
-indicator=Indicator
+indicator=Indik\u00e1tor
 indicator_group=Skupina indik\u00e1tor\u016f
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
-item_type=Item type
-landcover=Landcover
-last_2_sixmonths=Last 2 six-months
+item_type=Typ polo\u017eky
+landcover=krajinn\u00e9 pokryt\u00ed
+last_2_sixmonths=Posledn\u00ed 2 \u0161estim\u011bs\u00edce
 last_3_months=Posledn\u00ed 3 m\u011bs\u00edce
 last_4_quarters=Posledn\u00ed 4 \u010dtvrtlet\u00ed 
 last_4_weeks=Posledn\u00ed 4 t\u00fddny
@@ -110,23 +110,23 @@ last_sixmonth=Posledn\u00ed p\u016flrok
 last_week=Minul\u00fd t\u00fdden
 last_5_years=Posledn\u00edch 5 let
 last_year=Posledn\u00ed rok
-latitude=Latitude
+latitude=Zem\u011bpisn\u00e1 \u0161\u00ed\u0159ka
 layer=Layer
 layers=Layers
 layer_stack_transparency=Layer stack / opacity
 legend_name=Legend name
 legend_name_is_required=Legend name is required
 legends=Legends
-legendset=Legend set
+legendset=Sada legend
 legend_sets_available=legend sets available
 legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
 level=\u00darove\u0148
-longitude=Longitude
+longitude=Zem\u011bpisn\u00e1 d\u00e9lka
 low_color_size=Low color / size
-low_size=Low size
+low_size=Mal\u00e1 velikost
 manage_favorites=Manage favorites
 map=Map
 max=Max
@@ -139,7 +139,7 @@ min_max_value=Min/max value
 monthly=M\u011bs\u00ed\u010dn\u011b
 name=N\u00e1zev
 next=Dal\u0161\u00ed
-nighttime_lights=Nighttime lights
+nighttime_lights=No\u010dn\u00ed sv\u011btla
 no=Ne
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
@@ -176,17 +176,17 @@ please_create_map_first=Please create a map first
 please_enter_a_name=Please enter a name
 please_enter_map_title=Please enter a map title
 point_color=Point color
-point_radius=Point radius
-population_density=Population density
-precipitation=Precipitation
-predefined=Predefined
+point_radius=Polom\u011br bodu
+population_density=Hustota obyvatel
+precipitation=Sr\u00e1\u017eky
+predefined=P\u0159eddefinov\u00e1no
 previous=Previous
 program=Program
 program_indicators=Ukazatele programu
-public_access=Public access
+public_access=Ve\u0159ejn\u00fd p\u0159\u00edstup
 quarterly=\u010ctvrtletn\u011b
 relative=Relativn\u00ed
-relocate=Relocate
+relocate=P\u0159em\u00edstit
 relocate_facility=Relocate facility
 remove=Odebrat
 rename=Rename
@@ -196,12 +196,12 @@ search=Hledat
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
 select=Vybrat
-select_groups=Select groups
-selection_mode=Selection mode
+select_groups=Vyberte skupiny
+selection_mode=Re\u017eim v\u00fdb\u011bru
 select_dataset=Select dataset
 select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
-select_levels=Select levels
+select_levels=Vybrat \u00farovn\u011b
 select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
@@ -212,31 +212,31 @@ select_stage=Select stage
 select_sub_units=Select sub-units
 select_year=Vybrat rok
 service_url=Service URL
-share=Share
+share=Sd\u00edlet
 share_with_other_people=Share with others
-sharing_settings=Sharing settings
+sharing_settings=Nastaven\u00ed sd\u00edlen\u00ed
 show=Show
 show_circular_area=Show circular area with radius (m)
-show_information_sheet=Show information
-show_lon_lat=Show longitude/latitude
+show_information_sheet=Zobrazit informace
+show_lon_lat=Zobrazit zem\u011bpisnou d\u00e9lku / \u0161\u00ed\u0159ku
 sixmonthly=\u0160estim\u011bs\u00ed\u010dn\u00ed
 sixmonthly_april=Duben \u0161est m\u011bs\u00edc\u016f
 stage=F\u00e1ze
-start_date=Start date
-start_end_dates=Start/end dates
+start_date=Datum za\u010d\u00e1tku
+start_end_dates=Datum zah\u00e1jen\u00ed / ukon\u010den\u00ed
 start_end_value=Start/end value
 stddev=Standardn\u00ed odchylka
-steps=Steps
-style=Style
+steps=Kroky
+style=Styl
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
 sum=Sou\u010det
-swap_lon_lat=Swap longitude/latitude
+swap_lon_lat=Prohodit zem\u011bpisnou d\u00e9lku / \u0161\u00ed\u0159ku
 symbol_layer=Facility layer
 table=Table
-temperature=Temperature
+temperature=Teplota
 text_filter=Text filter
-thematic_layer=Thematic layer
+thematic_layer=Tematick\u00e1 vrstva
 thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
