8ad81dc fix(translations): sync translations from transifex (v29)

--- a/i18n/i18n_app_cs.properties
+++ b/i18n/i18n_app_cs.properties
@@ -1,10 +1,10 @@
-about=About
+about=O...
 add_legend=Add legend
-add_new=Add new
+add_new=P\u0159idat nov\u00fd
 address=Address
 add_to_dashboard=Add to dashboard
 aggregation_type=Typ agregace
-allow_external_access=Allow external access
+allow_external_access=Povolit extern\u00ed p\u0159\u00edstup
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatick\u00fd
@@ -36,13 +36,13 @@ dataelement=Datov\u00fd prvek
 dataelement_group=Skupina datov\u00fdch prvk\u016f
 dataset=Datov\u00e1 sada
 delete=Smazat
-delete_favorite=Delete favorite
+delete_favorite=Smazat obl\u00edbenou polo\u017eku
 details=Detaily
 download=St\u00e1hnout
 download_map_as_png=Download map as PNG
 drill_down_one_level=P\u0159ej\u00edt o jednu \u00farove\u0148 n\u00ed\u017ee
 drill_up_one_level=Jd\u011bte o jednu \u00farove\u0148 v\u00fd\u0161
-duplicate=Duplicate
+duplicate=Duplik\u00e1t
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
 elevation=Nadmo\u0159sk\u00e1 v\u00fd\u0161ka
@@ -65,7 +65,7 @@ facility_layer_export_currently_not_supported=Facility layer export currently no
 facility_layer_legend=Facility layer legend
 favorite_name=Favorite name
 favorite_outdated_create_new=Favorite is outdated - please create a new one
-favorites=Favorites
+favorites=Obl\u00edben\u00e9
 filter=Filtr
 filter_by_value=Filter by value
 financial_april=Finan\u010dn\u00ed rok (od dubna)
@@ -73,10 +73,10 @@ financial_july=Finan\u010dn\u00ed rok (od \u010dervence)
 financial_oct=Finan\u010dn\u00ed rok (od \u0159\u00edjna)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
-go_to_charts=Go to charts
-go_to_pivot_tables=Go to pivot tables
+go_to_charts=P\u0159ej\u00edt na grafy
+go_to_pivot_tables=P\u0159ej\u00edt na kontingen\u010dn\u00ed tabulky
 greater_than=Greater than
-group=Group
+group=Skupina
 group_nearby_events=Group nearby events
 groups=Skupiny
 groupset=Skupinov\u00e1 sada
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=Velk\u00e1 velikost
-home=Home
+home=Domovsk\u00e1 strana
 indicator=Indik\u00e1tor
 indicator_group=Skupina indik\u00e1tor\u016f
 information=Information
@@ -127,8 +127,8 @@ level=\u00darove\u0148
 longitude=Zem\u011bpisn\u00e1 d\u00e9lka
 low_color_size=Low color / size
 low_size=Mal\u00e1 velikost
-manage_favorites=Manage favorites
-map=Map
+manage_favorites=Spravovat obl\u00edben\u00e9 polo\u017eky
+map=Mapa
 max=Max
 min=Min
 min_max_c=Min/max \u00c2\u00b0C
@@ -152,8 +152,8 @@ no_program_stage_selected=No program stage selected
 no_selected_items=No selected items
 no_system_info_found=No system info found
 no_valid_coordinates_found=No valid coordinates found
-open_last_chart=Open last chart
-open_last_table=Open last table
+open_last_chart=Otev\u0159\u00edt posledn\u00ed graf
+open_last_table=Otev\u0159\u00edt posledn\u00ed tabulku
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
@@ -164,8 +164,8 @@ organisationunit_groupset=Organisation unit group set
 organisation_units=Organiza\u010dn\u00ed jednotky
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
-overwrite=Overwrite
-overwrite_favorite=Overwrite favorite
+overwrite=P\u0159epsat
+overwrite_favorite=P\u0159epsat obl\u00edben\u00e9
 page=Page
 parent_unit=Nad\u0159azen\u00e1 jednotka
 period=Obdob\u00ed
@@ -189,11 +189,11 @@ relative=Relativn\u00ed
 relocate=P\u0159em\u00edstit
 relocate_facility=Relocate facility
 remove=Odebrat
-rename=Rename
+rename=P\u0159ejmenovat
 reporting_rates=M\u00edry vykazov\u00e1n\u00ed
-revision=Revision
+revision=Revize
 search=Hledat
-search_for_favorites=Search for favorites
+search_for_favorites=Vyhledat obl\u00edben\u00e9 
 search_for_user_groups=Search for user groups
 select=Vybrat
 select_groups=Vyberte skupiny
@@ -202,20 +202,20 @@ select_dataset=Select dataset
 select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
 select_levels=Vybrat \u00farovn\u011b
-select_organisation_unit_groups=Select organisation unit groups
-select_organisation_unit_levels=Select organisation unit levels
-select_organisation_units=Select organisation units
+select_organisation_unit_groups=Vybrat skupiny organiza\u010dn\u00edch jednotek
+select_organisation_unit_levels=Vybrat \u00farovn\u011b organiza\u010dn\u00ed jednotky
+select_organisation_units=Vybrat organiza\u010dn\u00ed jednotky
 select_period=Select period
 select_program=Vybrat program
 select_service=Select service
 select_stage=Select stage
-select_sub_units=Select sub-units
+select_sub_units=Vybrat podjednotky
 select_year=Vybrat rok
 service_url=Service URL
 share=Sd\u00edlet
 share_with_other_people=Share with others
 sharing_settings=Nastaven\u00ed sd\u00edlen\u00ed
-show=Show
+show=Zobrazit
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Zobrazit informace
 show_lon_lat=Zobrazit zem\u011bpisnou d\u00e9lku / \u0161\u00ed\u0159ku
@@ -233,7 +233,7 @@ sub_x2_units=Sub-x2-units
 sum=Sou\u010det
 swap_lon_lat=Prohodit zem\u011bpisnou d\u00e9lku / \u0161\u00ed\u0159ku
 symbol_layer=Facility layer
-table=Table
+table=Tabulka
 temperature=Teplota
 text_filter=Text filter
 thematic_layer=Tematick\u00e1 vrstva
@@ -256,22 +256,22 @@ username=U\u017eivatelsk\u00e9 jm\u00e9no
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
+user_sub_units=U\u017eivatelsk\u00e9 podjednotky
+user_sub_x2_units=U\u017eivatel pod\u0159azen\u00e9 x2 jednotky 
 value=Hodnota
 value_type=Typ hodnoty
 variance=Rozptyl
-version=Version
+version=Verze
 weekly=T\u00fddn\u011b
 weekly_wednesday=T\u00fddn\u011b (od st\u0159edy)
 weekly_thursday=T\u00fddn\u011b (od \u010dtvrtka)
 weekly_saturday=T\u00fddn\u011b (od soboty)
 weekly_sunday=T\u00fddn\u011b (za\u010d\u00e1n\u00e1 ned\u011bl\u00ed)
-write_interpretation=Write interpretation
+write_interpretation=Napi\u0161te interpretaci
 write_your_interpretation=Write your interpretation
 yearly=Ro\u010dn\u011b
 yes=Ano
 yesterday=V\u010dera
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
-you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
+you_do_not_have_access_to_all_items_in_this_favorite=Nem\u00e1te p\u0159\u00edstup ke v\u0161em polo\u017ek\u00e1m v t\u00e9to obl\u00edben\u00e9 polo\u017ece
 
