9fb53f3 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_cs.properties
+++ b/i18n/i18n_app_cs.properties
@@ -122,7 +122,7 @@ legend_sets_available=legend sets available
 legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
-legend_type=Legend type
+legend_type=Typ legendy
 level=\u00darove\u0148
 longitude=Zem\u011bpisn\u00e1 d\u00e9lka
 low_color_size=Low color / size
@@ -147,7 +147,7 @@ none=\u017d\u00e1dn\u00fd
 no_event_coordinates_found=No event coordinates found
 no_organisation_unit_levels=No organisation unit levels
 no_organisation_units_specified=No organisation units specified
-no_period_selected=No period selected
+no_period_selected=Nen\u00ed vybr\u00e1no \u017e\u00e1dn\u00e9 obdob\u00ed
 no_program_stage_selected=No program stage selected
 no_selected_items=No selected items
 no_system_info_found=No system info found
@@ -166,7 +166,7 @@ organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=P\u0159epsat
 overwrite_favorite=P\u0159epsat obl\u00edben\u00e9
-page=Page
+page=Strana
 parent_unit=Nad\u0159azen\u00e1 jednotka
 period=Obdob\u00ed
 period_type=Typ obdob\u00ed
@@ -180,7 +180,7 @@ point_radius=Polom\u011br bodu
 population_density=Hustota obyvatel
 precipitation=Sr\u00e1\u017eky
 predefined=P\u0159eddefinov\u00e1no
-previous=Previous
+previous=P\u0159edchoz\u00ed
 program=Program
 program_indicators=Ukazatele programu
 public_access=Ve\u0159ejn\u00fd p\u0159\u00edstup
